moving platforms work

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,11 +61,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Movement.cs" />
-    <Compile Include="Assets\NewBehaviourScript.cs" />
     <Compile Include="Assets\Scripts\Controller2D.cs" />
     <Compile Include="Assets\Scripts\PlatformController.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
+    <Compile Include="Assets\Scripts\RaycastController.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>/Users/jeffreyluo/Desktop/Games/PlatformerTest/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
